--- a/src/styles/pages/leistungen/Leistungen.scss
+++ b/src/styles/pages/leistungen/Leistungen.scss
@@ -177,7 +177,7 @@
         width: 100%;
         height: 50%;
         .adults-title-container {
-          height: 30%;
+          height: 25%;
           display: flex;
           align-items: center;
           justify-content: center;
@@ -192,7 +192,8 @@
         .adults-btn-container {
           // background-color: green;
           width: 100%;
-          // height: 30%;
+          height: 25%;
+          // background-color: red;
           display: flex;
           align-items: center;
           justify-content: center;
@@ -218,7 +219,7 @@
         width: 100%;
         height: 50%;
         .kids-title-container {
-          height: 30%;
+          height: 25%;
           display: flex;
           align-items: center;
           justify-content: center;
@@ -231,7 +232,7 @@
         }
         .kids-btn-container {
           width: 95%;
-          // height: 30%;
+          height: 25%;
           display: flex;
           align-items: center;
           justify-content: center;
